Committing changes that were previously un-committed in my old branch

--- a/public/js/templates/countdown.html
+++ b/public/js/templates/countdown.html
@@ -23,7 +23,6 @@
 <table class="countdown" ng-if="type == 'classic' && isPaused && !isVisibleWhenPaused">
     <tr>
         <td class="value">Pauseds</td>
-		<td class="value">{{ countdownText }}</td>
     </tr>
 </table>
 <table class="countdown live" ng-class="{ 't-minus-zero': tMinusZero }" ng-if="type == 'live' && (!isPaused || isVisibleWhenPaused)">
@@ -37,6 +36,6 @@
 </table>
 <table class="countdown live" ng-if="type == 'live' && isPaused">
     <tr>
-        <td>Paused</td>
+        <td>Pauseds</td>
     </tr>
 </table>
