--- a/public/js/templates/countdown.html
+++ b/public/js/templates/countdown.html
@@ -22,7 +22,7 @@
 </table>
 <table class="countdown" ng-if="type == 'classic' && isPaused && !isVisibleWhenPaused">
     <tr>
-        <td class="value">Pauseds</td>
+        <td class="value">Paused</td>
     </tr>
 </table>
 <table class="countdown live" ng-class="{ 't-minus-zero': tMinusZero }" ng-if="type == 'live' && (!isPaused || isVisibleWhenPaused)">
