--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -8744,39 +8744,16 @@ form[name="subscribeForm"] .subscription-failed {
 .fade-in-out.ng-hide {
   opacity: 0; }
 
-#home .app-description {
-  padding: 0 10px; }
-
-#home p {
-  font-size: 16px;
-  line-height: 1.6; }
-  #home p.exclaim {
-    font-size: 48px; }
-    #home p.exclaim a {
-      text-decoration: none;
-      color: #ccac55;
-      font-weight: 400; }
-  .state-small #home p {
-    font-size: 14px; }
-  @media (max-width: 640px) {
-    #home p {
-      font-size: 14px; } }
-
-#home .description {
+#footer .description {
   position: absolute;
-  bottom: 0;
-  text-align: center;
+  top: 50%;
   width: 100%;
+  text-align: center;
   font-size: 12px; }
 
-#home .expando-button {
-  width: 150px;
-  -webkit-transition: width ease-in-out 0.5s 0s;
-          transition: width ease-in-out 0.5s 0s; }
-  #home .expando-button:hover {
-    width: 200px; }
-
-#home {
+#footer {
+  min-height: 0;
+  height: auto;
   background-image: url("../images/backgrounds/orbcommdark.jpg"); }
 
 #nextLaunch {
